// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`css-modules-dts-loader > Basic Functionality > should generate .d.ts file for CSS modules 1`] = `
"// This file is automatically generated.
// Please do not change this file!
export const validClass: string;
"
`;

exports[`css-modules-dts-loader > Basic Functionality > should handle empty CSS files 1`] = `
"// This file is automatically generated.
// Please do not change this file!
"
`;

exports[`css-modules-dts-loader > JavaScript Keywords as Class Names > should handle JS keyword class names with namedExport=false 1`] = `
"// This file is automatically generated.
// Please do not change this file!
interface CssExports {
  "class": string;
  "export": string;
  "for": string;
}

export const cssExports: CssExports;
export default cssExports;
"
`;

exports[`css-modules-dts-loader > JavaScript Keywords as Class Names > should handle JS keyword class names with namedExport=true 1`] = `
"// This file is automatically generated.
// Please do not change this file!
export const validClass: string;

declare const __dts_class: string;
declare const __dts_export: string;
declare const __dts_import: string;
export { __dts_class as "class" };
export { __dts_export as "export" };
export { __dts_import as "import" };
"
`;

exports[`css-modules-dts-loader > JavaScript Keywords as Class Names > should handle mixed keywords and normal classes 1`] = `
"// This file is automatically generated.
// Please do not change this file!
export const container: string;
export const title: string;

declare const __dts_class: string;
export { __dts_class as "class" };
"
`;

exports[`css-modules-dts-loader > JavaScript Keywords as Class Names > should handle mixed keywords and normal classes with only keyword exported 1`] = `
"// This file is automatically generated.
// Please do not change this file!

declare const __dts_class: string;
export { __dts_class as "class" };
"
`;

exports[`css-modules-dts-loader > Options: camelCase > should convert kebab-case class names to camelCase 1`] = `
"// This file is automatically generated.
// Please do not change this file!
export const kebabCaseClass: string;
"
`;

exports[`css-modules-dts-loader > Options: indentStyle and indentSize > should use custom space indentation size when specified 1`] = `
"// This file is automatically generated.
// Please do not change this file!
export const testClass: string;
"
`;

exports[`css-modules-dts-loader > Options: indentStyle and indentSize > should use tabs for indentation when specified 1`] = `
"// This file is automatically generated.
// Please do not change this file!
export const testClass: string;
"
`;

exports[`css-modules-dts-loader > Options: keywordPrefix > should not affect interface export mode (namedExport=false) 1`] = `
"// This file is automatically generated.
// Please do not change this file!
interface CssExports {
  "class": string;
  "export": string;
}

export const cssExports: CssExports;
export default cssExports;
"
`;

exports[`css-modules-dts-loader > Options: keywordPrefix > should use custom keywordPrefix (dts) 1`] = `
"// This file is automatically generated.
// Please do not change this file!
export const validClass: string;

declare const dtsclass: string;
declare const dtsexport: string;
export { dtsclass as "class" };
export { dtsexport as "export" };
"
`;

exports[`css-modules-dts-loader > Options: keywordPrefix > should use custom keywordPrefix with underscores 1`] = `
"// This file is automatically generated.
// Please do not change this file!
export const button: string;

declare const my_prefix_import: string;
export { my_prefix_import as "import" };
"
`;

exports[`css-modules-dts-loader > Options: keywordPrefix > should use default __dts_ prefix for keywords 1`] = `
"// This file is automatically generated.
// Please do not change this file!
export const validClass: string;

declare const __dts_class: string;
declare const __dts_export: string;
export { __dts_class as "class" };
export { __dts_export as "export" };
"
`;

exports[`css-modules-dts-loader > Options: keywordPrefix > should work with keywordPrefix and sort option 1`] = `
"// This file is automatically generated.
// Please do not change this file!
export const alpha: string;
export const zebra: string;

declare const dtsclass: string;
declare const dtsexport: string;
export { dtsclass as "class" };
export { dtsexport as "export" };
"
`;

exports[`css-modules-dts-loader > Options: namedExport > should generate interface export when namedExport is false 1`] = `
"// This file is automatically generated.
// Please do not change this file!
interface CssExports {
  "zebra": string;
  "alpha": string;
  "beta": string;
}

export const cssExports: CssExports;
export default cssExports;
"
`;

exports[`css-modules-dts-loader > Options: namedExport > should generate named exports when namedExport is true 1`] = `
"// This file is automatically generated.
// Please do not change this file!
export const zebra: string;
export const alpha: string;
export const beta: string;
"
`;

exports[`css-modules-dts-loader > Options: quote > should use single quotes when specified 1`] = `
"// This file is automatically generated.
// Please do not change this file!
export const testClass: string;
"
`;

exports[`css-modules-dts-loader > Options: sort > should sort class names alphabetically when enabled 1`] = `
"// This file is automatically generated.
// Please do not change this file!
export const alpha: string;
export const beta: string;
export const zebra: string;
"
`;
